Overflow fix attempt #3
Please please

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 button,
 .number {
   padding: 10px;
-  max-width: 15%;
   text-align: center;
   border: 1px solid #000;
   background-color: #f9f9f9;
@@ -25,6 +24,7 @@ button,
   margin: 0 auto;
   height: 100%;
   grid-auto-rows: minmax(auto, 1fr);
+  grid-template-rows: repeat(auto-fill, minmax(min-content, 1fr));
 }
 
 #add-button-container {
